[gd_scene load_steps=4 format=3 uid="uid://cbwghbcukyham"]

[ext_resource type="Theme" uid="uid://derjom2jih82r" path="res://resources/default_theme.tres" id="1_0k6qf"]
[ext_resource type="Script" path="res://scripts/final_dialogue.gd" id="1_l7jhh"]
[ext_resource type="Texture2D" uid="uid://dwsiys6dhnc77" path="res://assets/images/sprites/benicio.png" id="2_kblyd"]

[node name="FinalDialogue" type="CanvasLayer"]
script = ExtResource("1_l7jhh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.207843, 0.207843, 0.752941)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0k6qf")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_kblyd")

[node name="DialogueLabel" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Oi! Meu nome é Benício, 
e eu sou um gatoelho, 
uma mistura fofa de gato 
e coelho! E o seu nome, 
qual é?"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="RespondeFormLabel" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "c"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PanelContainer2" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="DialogueCommands" type="CenterContainer" parent="CenterContainer/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer2/DialogueCommands"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer2/DialogueCommands/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NextDialogueLabel" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/DialogueCommands/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "APERTE [ESPAÇO] PARA CONTINUAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EscapeLabel" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/DialogueCommands/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "APERTE [ESC] PARA PULAR INSTRUÇÕES"
horizontal_alignment = 1
vertical_alignment = 1
